Update Classify Food img with watson VisualRecognition.ipynb

--- a/Classify Food img with watson VisualRecognition.ipynb
+++ b/Classify Food img with watson VisualRecognition.ipynb
@@ -19,7 +19,7 @@
     "\n",
     "visual_recognition = VisualRecognitionV3(\n",
     "    version='2018-03-19',\n",
-    "    iam_apikey='GgWZ5amJis-iQt90zCjTAyqeA7ct8AlqOyQUpP0tx_J-'\n",
+    "    iam_apikey='xxxxxxx'\n",
     ")"
    ]
   },
@@ -73,13 +73,13 @@
     "import requests\n",
     "from io import BytesIO\n",
     "\n",
-    "authenticator = IAMAuthenticator('GgWZ5amJis-iQt90zCjTAyqeA7ct8AlqOyQUpP0tx_J-')\n",
+    "authenticator = IAMAuthenticator('xxxxx')\n",
     "visual_recognition = VisualRecognitionV3(\n",
     "    version='2018-03-19',\n",
     "    authenticator=authenticator\n",
     ")\n",
     "\n",
-    "visual_recognition.set_service_url('https://api.us-south.visual-recognition.watson.cloud.ibm.com/instances/fd0e7272-816f-4c56-9fcb-69f9f866d906')\n",
+    "visual_recognition.set_service_url('xxxxxxx')\n",
     "\n",
     "url = 'https://media-cdn.tripadvisor.com/media/photo-s/1b/4a/e0/6a/rice-to-meet-you.jpg'\n",
     "classifier_ids = [\"food\"]\n",
